--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">BudgetV3</string>
+    <string name="set_currency">Set Currency</string>
+    <string name="app_name">Quick Budget</string>
     
     <!-- Common -->
     <string name="save">Save</string>
